--- a/app/views/v6-pcn/no-medex-radio.html
+++ b/app/views/v6-pcn/no-medex-radio.html
@@ -26,11 +26,11 @@ You didn't have a valid medical exemption certificate
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
-              You did not have a valid medical exemption certificate at the time, but you can still apply
+              You did not have a valid medical exemption certificate at the time, but you can still apply for one
             </h1>
           </legend>
 
-          <p>Although you did not have a valid medical exemption certificate when you claimed a free NHS prescription, you still have the chance to apply.</p>
+          <p>Although you did not have a valid medical exemption certificate when you claimed a free NHS prescription, you still have the chance to apply for one.</p>
 
           <p>You have until <strong>10 July 2023</strong> to get a medical exemption certificate.</p>
           <P>If your application is successful, you'll only have to pay the original prescription charge. You will not have to pay your penalty charge. </P>
@@ -50,7 +50,7 @@ You didn't have a valid medical exemption certificate
                 <div class="nhsuk-radios__item">
                     <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="credit">
                     <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                      Pay the original £9.65 prescription charge, and apply for a medical exemption certificate.
+                      Pay the original £9.65 prescription charge, and apply for a medical exemption certificate
                     </label>
                     
                 </div>
