updated medex pages content

--- a/app/views/v6-pcn/no-medex-radio-expiry.html
+++ b/app/views/v6-pcn/no-medex-radio-expiry.html
@@ -26,11 +26,11 @@ You didn't have a valid medical exemption certificate
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
-              Your exemption certificate was not valid at the time you claimed but you can still apply for a medical exemption
+              Your exemption certificate was not valid at the time you claimed but you can still apply for a medical exemption certificate
             </h1>
           </legend>
 
-          <p>Your exemption certificate had may have expired or you did n’t not get the certificate in time.</p>
+          <p>Your exemption certificate had may have expired or you did not get the certificate in time.</p>
           <p>You’ve also told us you have a medical condition. Although you did not have a valid medical exemption certificate when you claimed a NHS free prescription, you still have the chance to apply for one.</p>
 
           <p>You have until <strong>10 July 2023</strong> to get a medical exemption certificate.</p>
