inactive DD page added

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -625,6 +625,13 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Penalty Charge Notice - inactive Direct Debit</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-details-DD-inactive">Penalty Charge details inactive DD
+                            </a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Exemption certificate was not valid - Medex</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/no-medex-radio-expiry">Exemption certificate not valid at time you claimed
                             </a></td>
