hc3 end screen enquiry updated

--- a/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
+++ b/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
@@ -20,9 +20,12 @@ You have a HC3 certificate for limited help
       <h1 class="nhsuk-heading-l">You have a HC3 certificate for limited help with health costs</h1>
       <div class="nhsuk-form-group">
 
-<p>We cannot verify your entitlement at the moment.</p>
+<p>We cannot verify your entitlement at the moment. Contact us for further assistance.</p>
+<p>Our contact details are:</p>
+<p>Email: <a href="">nhsbsa.decs@nhsbsa.nhs.uk</a></p>
+<p>Telephone: 0300 330 1293</p>
 
-<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us for further assistance</a></p>
+<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Find out about call charges and other ways to contact us on our website.</a></p>
 
 <h3>Feedback</h3>
 
