--- a/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
+++ b/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
@@ -25,7 +25,7 @@ You have a HC3 certificate for limited help
 <p>Email: <a href="">nhsbsa.decs@nhsbsa.nhs.uk</a></p>
 <p>Telephone: 0300 330 1293</p>
 
-<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Find out about call charges and other ways to contact us on our website.</a></p>
+<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Find out about call charges and other ways to contact us on our website</a>.</p>
 
 <h3>Feedback</h3>
 
