--- a/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
+++ b/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
@@ -22,8 +22,8 @@ You have a HC3 certificate for limited help
 
 <p>We cannot verify your entitlement at the moment. Contact us for further assistance.</p>
 <p>Our contact details are:</p>
-<p>Email: <a href="">nhsbsa.decs@nhsbsa.nhs.uk</a></p>
-<p>Telephone: 0300 330 1293</p>
+<p>Email: <a href="">nhsbsa.decs@nhsbsa.nhs.uk</a><br>
+Telephone: 0300 330 1293</p>
 
 <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Find out about call charges and other ways to contact us on our website</a>.</p>
 
