matex screens and DD screens added

--- a/app/views/v6-pcn/penalty-charge-details-DD-rejected.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-rejected.html
@@ -34,6 +34,7 @@ Penalty Charge Notice details on hold
           Do not delay
         </span>
       </h3>
+      <p>Your Direct Debit was rejected by your bank.</p>
       <p>You now have 10 days to either confirm you were entitled to free NHS prescriptions, or pay this Penalty Charge Notice (by 16 September 2021).
         <br><br>If you do not respond, an extra surcharge of up to £50 may be added to these charges.</p>
     </div>
