--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -621,14 +621,21 @@ NHS.UK prototype kit
                             <td class="nhsuk-table__cell">Penalty Charge Notice - active Direct Debit</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-details-DD-active">Penalty Charge details active DD
                             </a></td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Penalty Charge Notice - inactive Direct Debit</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-details-DD-inactive">Penalty Charge details inactive DD
                             </a></td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Penalty Charge Notice - rejected Direct Debit</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-details-DD-rejected">Penalty Charge details rejected DD
+                            </a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
