--- a/app/views/v6-pcn/no-matex-radio-expiry.html
+++ b/app/views/v6-pcn/no-matex-radio-expiry.html
@@ -26,11 +26,12 @@ You didn't have a valid medical exemption certificate
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
-              Your exemption certificate was not valid at the time you claimed but you can still apply
+              Your exemption certificate was not valid at the time you claimed, but you can still apply for a maternity exemption certificate
             </h1>
           </legend>
 
-          <p>Although you did not have a valid maternity exemption certificate when you claimed a free NHS prescription, you still have the chance to apply.</p>
+          <p>Your exemption certificate may have expired or you did not get the certificate in time.</p>
+          <p>You’ve also told us you were pregnant or had given birth in the previous 12 months at the time you had claimed. Although you did not have a valid maternity exemption certificate when you claimed a NHS free prescription, you still have the chance to apply for one.</p>
 
           <p>You have until <strong>10 July 2023</strong> to get a maternity exemption certificate.</p>
           <P>If your application is successful, you'll only have to pay the original prescription charge. You will not have to pay your penalty charge. </P>
@@ -50,7 +51,7 @@ You didn't have a valid medical exemption certificate
                 <div class="nhsuk-radios__item">
                     <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="credit">
                     <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                      Pay the original £9.65 prescription charge, and apply for a maternity exemption certificate.
+                      Pay the original £9.65 prescription charge, and apply for a maternity exemption certificate
                     </label>
                     
                 </div>
@@ -79,7 +80,7 @@ You didn't have a valid medical exemption certificate
            
          
 
-          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
+          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
           <p><a href="">Print this page</a></p>
          
 
