DD blocked screen added

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -639,6 +639,13 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Penalty Charge Notice - blocked Direct Debit</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-details-DD-blocked">Penalty Charge details blocked DD
+                            </a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Exemption certificate was not valid - Medex</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/no-medex-radio-expiry">Exemption certificate not valid at time you claimed
                             </a></td>
