active DD screen content updated

--- a/app/views/v6-pcn/penalty-charge-details-DD-active.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-active.html
@@ -34,7 +34,7 @@ Penalty Charge Notice details on hold
           Important information
         </span>
       </h3>
-      <p>You have set up a Direct Debit to pay your Penalty Charge Notice.
+      <p>You've set up a Direct Debit to pay your penalty charge.
         <br><br>If we're unable to take a payment, you may have to pay a surcharge of up to £50.</p>
     </div>
 
@@ -261,23 +261,20 @@ Penalty Charge Notice details on hold
       </div>
     </dl>
 
-    
-    
-   
+    <h2>As you’ve set up a Direct Debit to pay your penalty charge, you’re not able to confirm your entitlement online</h2>
 
-    <H2>You have set up a Direct Debit to pay your Penalty Charge</H2>
-    <p>You can no longer make a challenge online if you have</p>
+    <p>You’re not able to confirm your entitlement online if you have:</p>
     <ul>
-      <li>an active Direct Debit.</li>
-      <li>previously set up a Direct Debit.</li>
-      <li>made full or partial payment by post, telephone or online.</li>
+      <li>an active Direct Debit</li>
+      <li>previously set up a Direct Debit</li>
+      <li>made full or partial payment by post, telephone or online</li>
     </ul>
   </div>
   <dl>
 
   </dl>
 </div>
-<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new window)</a>.</p>
+<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your <br> Penalty Charge Notice (opens in a new window)</a>.</p>
 
 </div>
 
