--- a/app/views/v6-pcn/penalty-charge-details-DD-inactive.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-inactive.html
@@ -261,9 +261,17 @@ Penalty Charge Notice details on hold
       </div>
     </dl>
 
+    <p>You cannot do anything more to confirm your entitlement online.</p>
+    <p>You’re not able to confirm your entitlement online if you have:</p>
+    <ul>
+      <li>an active Direct Debit</li>
+      <li>previously set up a Direct Debit</li>
+      <li>made full or partial payment by post, telephone or online</li>
+    </ul>
+
     
     
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new window)</a>.</p>
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new tab)</a>.</p>
 
     <h2>Pay a Penalty Charge Notice</h2>
     <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by either:</p>
