--- a/app/views/v6-pcn/penalty-charge-details-DD-blocked.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-blocked.html
@@ -264,7 +264,7 @@ Penalty Charge Notice details on hold
 
     
     
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new window)</a>.</p>
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new tab)</a>.</p>
 
     <h2>Pay a Penalty Charge Notice</h2>
     <p>You can pay by either debit or credit card.</p>
