--- a/app/views/v6-pcn/penalty-charge-details-DD-rejected.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-rejected.html
@@ -272,7 +272,7 @@ Penalty Charge Notice details on hold
 
     
     
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new tab)</a>.</p>
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new tab)</a>.</p>
 
     <h2>Pay a Penalty Charge Notice</h2>
     <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by either:</p>
