DD blocked screen content updated

--- a/app/views/v6-pcn/penalty-charge-details-DD-active.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-active.html
@@ -274,7 +274,7 @@ Penalty Charge Notice details on hold
 
   </dl>
 </div>
-<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your <br> Penalty Charge Notice</a>.</p>
+<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about your Penalty <br>Charge Notice</a>.</p>
 
 </div>
 
