--- a/app/views/v6-pcn/penalty-charge-details-DD-blocked.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-blocked.html
@@ -262,12 +262,21 @@ Penalty Charge Notice details on hold
       </div>
     </dl>
 
+    <p>You cannot do anything more to confirm your entitlement online.</p>
+    <p>You’re  not able to confirm your entitlement online if you have:</p>
+    <ul>
+      <li>an active Direct Debit</li>
+      <li>previously set up a Direct Debit</li>
+      <li>made full or partial payment by post, telephone or online</li>
+    </ul>
+
+
     
     
     <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new tab)</a>.</p>
 
     <h2>Pay a Penalty Charge Notice</h2>
-    <p>You can pay by either debit or credit card.</p>
+    <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by either debit or credit card.</p>
     <p>You are no longer able to pay by Direct Debit. We were unable to confirm your details when you applied previously.</p>
   </div>
   <dl>
