DD screens content updated

--- a/app/views/v6-pcn/penalty-charge-details-DD-rejected.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-rejected.html
@@ -262,12 +262,11 @@ Penalty Charge Notice details on hold
       </div>
     </dl>
 
-    <p>You cannot do anything more to confirm your entitlement online.</p>
-    <p>You’re  not able to confirm your entitlement online if you have:</p>
+    <h2>You'll not be able to confirm your entitlement online</h2>
+    <p>This is because you have either:</p>
     <ul>
       <li>an active Direct Debit</li>
       <li>previously set up a Direct Debit</li>
-      <li>made full or partial payment by post, telephone or online</li>
     </ul>
 
     
