--- a/app/views/v6-pcn/penalty-charge-details-DD-active.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-active.html
@@ -261,13 +261,12 @@ Penalty Charge Notice details on hold
       </div>
     </dl>
 
-    <h2>As you’ve set up a Direct Debit to pay your penalty charge, you’re not able to confirm your entitlement online</h2>
+    <h2>You'll not be able to confirm your entitlement online</h2>
 
-    <p>You’re not able to confirm your entitlement online if you have:</p>
+    <p>This is because you have either:</p>
     <ul>
       <li>an active Direct Debit</li>
       <li>previously set up a Direct Debit</li>
-      <li>made full or partial payment by post, telephone or online</li>
     </ul>
   </div>
   <dl>
