cert not valid pages updated

--- a/app/views/v6-pcn/cannot-confirm-pcn.html
+++ b/app/views/v6-pcn/cannot-confirm-pcn.html
@@ -37,7 +37,7 @@ We cannot confirm you were entitled
  
         <h2 class="nhsuk-heading-m">If you were not entitled</h2>
         <p>You will need to pay the total amount of £57.90.</p>
-        <a class="nhsuk-button" href="payment-method">Pay Now</a>
+        <a class="nhsuk-button" href="payment-method">Pay now</a>
 
 
         <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim,
@@ -55,7 +55,7 @@ We cannot confirm you were entitled
         <h3>Feedback</h3>
         <p>Leaving feedback takes 5 minutes. Your comments will help us  provide a better service.</p>
 
-        <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae"target="_blank">Leave feedback (opens in a new window)</a></p>
+        <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae"target="_blank">Leave feedback (opens in a new tab)</a></p>
 
 
 
