--- a/app/views/v6-pcn/exemption-cert-not-valid-pcn-decs.html
+++ b/app/views/v6-pcn/exemption-cert-not-valid-pcn-decs.html
@@ -12,39 +12,33 @@ Exemption certification not valid decs
 
 {% block content %}
 
-<span class="nhsuk-caption-l">Pay a Penalty Charge Notice</span>
+<span class="nhsuk-caption-l">Confirm your entitlement</span>
 <h1 class="nhsuk-heading-xl">Your exemption certificate was not valid at the time you claimed</h1>
 
 <p>This may have been because your certificate had expired or you did not get the certificate in time.</p>
-<h2>What to do next</h2>
-<p>You have the following options:</p>
-<ul>
-  <li>Send us proof to show that you were entitled to free or reduced cost dental treatment on 23 April 2021.</li>
-</ul>
+<h2>If you were not entitled</h2>
+<p>You will need to pay the total amount of £57.90.</p>
 
+<a class="nhsuk-button" href="payment-method">Pay now</a>
 
-<p><a href="url">How to send proof</a></p>
+<p>If you were not entitled to free or reduced cost dental treatment but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review"> Find out if you can ask for a review.</a></p>
+
 <div>
+
+  <h2>If you were entitled</h2>
+  <p>Send us proof to show that you were entitled to free or reduced cost dental treatment or had a valid Prescription Prepayment Certificate between 13 March 2023 and 31 March 2023.</p>
+  <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a>.</p>
 
 </div>
 
-<ul>
-  <li>Pay the total amount of £123.80.</li>
-</ul>
-
-<button class="nhsuk-button" data-module="nhsuk-button" type="submit">
- Pay now
-</button>
-
-<p>If you were not entitled to free or reduced cost dental treatment but have an exceptional reason why you made the claim, you can ask us to review your Penalty Charge Notice.<a href="url"> Find out if you can ask for a review.</a></p>
 <p><a href="url">Print this page</a></p>
 
 
 
-<p><h3>Feedback</h3></p>
-<p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
+<p><h2>Feedback</h2></p>
+<p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
 
-<p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae"target="_blank">Leave feedback (opens in a new window)</a></p>
+<p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae"target="_blank">Leave feedback (opens in a new tab)</a></p>
 
     </div>
   </div>
