--- a/app/views/v6-pcn-decs/surcharge-penalty-charge-on-hold.html
+++ b/app/views/v6-pcn-decs/surcharge-penalty-charge-on-hold.html
@@ -48,14 +48,6 @@
                         </dd>
                     </div>
 
-                    <div class="nhsuk-summary-list__row">
-                        <dt class="nhsuk-summary-list__key">
-                            Outstanding treatment charge
-                        </dt>
-                        <dd class="nhsuk-summary-list__value">
-                            £14.30
-                        </dd>
-                    </div>
 
                     <div class="nhsuk-summary-list__row">
                         <dt class="nhsuk-summary-list__key">
@@ -72,6 +64,15 @@
                         </dt>
                         <dd class="nhsuk-summary-list__value">
                             £35.75
+                        </dd>
+                    </div>
+
+                    <div class="nhsuk-summary-list__row">
+                        <dt class="nhsuk-summary-list__key">
+                            Total amount to pay
+                        </dt>
+                        <dd class="nhsuk-summary-list__value">
+                            <b>£121.55</b>
                         </dd>
                     </div>
                 </dl>
@@ -125,7 +126,7 @@
                     Exemption reason ticked
                 </dt>
                 <dd class="nhsuk-summary-list__value">
-                    Has a valid HC3 certificate - limited help with health costs
+                    Has a valid medical exemption certificate
                 </dd>
             </div>
 
