updated content to PCN notice pages

--- a/app/views/v6-pcn-decs/penalty-charge-details-hc3-decs.html
+++ b/app/views/v6-pcn-decs/penalty-charge-details-hc3-decs.html
@@ -131,7 +131,7 @@ Penalty Charge Notice details hc3
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Amount you you've already paid 
+              Amount you've already paid 
             </dt>
             <dd class="nhsuk-summary-list__value">
               £0.00
