--- a/app/views/v6-pcn/penalty-charge-details-hc3-decs.html
+++ b/app/views/v6-pcn/penalty-charge-details-hc3-decs.html
@@ -131,7 +131,7 @@ Penalty Charge Notice details hc3
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Amount you you've already paid 
+              Amount you've already paid 
             </dt>
             <dd class="nhsuk-summary-list__value">
               £0.00
@@ -156,6 +156,14 @@ Penalty Charge Notice details hc3
             </dd>
 
           </div>
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Total amount to pay 
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              <strong>£73.50</strong>
+            </dd>
 
 
         </dl>
