could not verify error

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -849,6 +849,15 @@ NHS.UK prototype kit
                 </tr>
 
             </tbody>
+
+            <tbody class="nhsuk-table__body">
+                <tr role="row" class="nhsuk-table__row">
+                <td class="nhsuk-table__cell">We could not verify your details</td>
+                 <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/could-not-verify-details">Could not verify details</a></td>
+                <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                </tr>
+
+            </tbody>
             </table>
         </div>
         </details>
