--- a/app/views/v6-pcn/error-messages/could-not-verify-details.html
+++ b/app/views/v6-pcn/error-messages/could-not-verify-details.html
@@ -12,9 +12,23 @@
 
 {% block content %}
 
-
 <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
+  <div class="nhsuk-grid-column-two-thirds">
+
+    <div class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+      <h2 class="nhsuk-error-summary__title" id="error-summary-title">
+        There is a problem
+      </h2>
+      <div class="nhsuk-error-summary__body">
+  
+        <ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+          <li>
+            <a href="#contact-error">Update your address or bank details before trying again</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
         <span class="nhsuk-caption-l">Pay an NHS Penalty Charge Notice</span>
         <h1 class="nhsuk-heading-xl">We could not verify your details</h1>    
 
@@ -23,6 +37,10 @@
         <p>Select Try again after you have updated your details.</p>
 
 
+<div class="nhsuk-form-group nhsuk-form-group--error">
+  <span class="nhsuk-error-message" id="contact-error">
+    <span class="nhsuk-u-visually-hidden">Error:</span> Update your address or bank details before trying again
+  </span>
         <dl class="nhsuk-summary-list">
 
             <div class="nhsuk-summary-list__row">
@@ -59,6 +77,9 @@
               </dd>
           
             </div>
+          </div>
+         
+          
           
             
           
