cancel link routes updated

--- a/app/views/v6-pcn/confirm-direct-debit.html
+++ b/app/views/v6-pcn/confirm-direct-debit.html
@@ -163,7 +163,7 @@ Confirm and submit your Direct Debit
         Continue
       </a>
       ​
-      <p><a href="url">Cancel</a></p>
+      <p><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
 
 
 
