--- a/app/views/v6-pcn/dd-check-answers.html
+++ b/app/views/v6-pcn/dd-check-answers.html
@@ -223,7 +223,7 @@ Check your answers
       <button class="nhsuk-button" type="submit">
        Continue
       </button>
-      <p><a href="respond-to-your-letter">Cancel</a></p>
+      <p><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
      </div>
 
 
