--- a/app/views/v6-pcn/enter-bank-details.html
+++ b/app/views/v6-pcn/enter-bank-details.html
@@ -87,7 +87,7 @@ Enter your bank details
       Continue
     </a>
 ​
-    <p><a href="url">Cancel</a></p>
+    <p><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
 
 
 
