--- a/app/views/v6-pcn/direct-debit-check-address.html
+++ b/app/views/v6-pcn/direct-debit-check-address.html
@@ -84,7 +84,7 @@ Check your address is correct
     <button class="nhsuk-button" type="submit">
      Continue
     </button>
-    <p><a href="respond-to-your-letter">Cancel</a></p>
+    <p><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
     </div>
   </form>
         
