cancel links rerouted in DD

--- a/app/views/v6-pcn/error-messages/cannot-set-up-direct-debit.html
+++ b/app/views/v6-pcn/error-messages/cannot-set-up-direct-debit.html
@@ -33,7 +33,7 @@ We cannot set up your Direct Debit
       <p><b>Email</b>: <a href="mailto:someone@example.com">nhsbsa.pecs@nhsbsa.nhs.uk</a> </p>
       <p>You'll need your reference number. This is in the top left-hand corner of your Penalty Charge Notice letter. </p>
 ​
-      <p><a href="respond-to-your-letter">Cancel</a></p>
+      <p><a href="../penalty-charge-notice-details-bsa">Cancel</a></p>
 ​
 ​
 ​
