--- a/app/views/v6-pcn/unable-to-set-up-direct-debit.html
+++ b/app/views/v6-pcn/unable-to-set-up-direct-debit.html
@@ -39,7 +39,7 @@ You are unable to set up a Direct Debit
         <a href="pay-by-dd"><button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
         </button></a>
-        <p><a href="respond-to-your-letter">Cancel</a></p>
+        <p><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
    
 
     </div>
