--- a/app/views/v6-pcn/we-could-not-verify-your-details.html
+++ b/app/views/v6-pcn/we-could-not-verify-your-details.html
@@ -79,7 +79,7 @@
         
 
         <p>
-            <a href="#">Cancel</a>
+            <a href="penalty-charge-notice-details-bsa">Cancel</a>
        </div>
 </div>
 
