--- a/app/views/v6-pcn/we-have-tried-to-find-your-updated-details.html
+++ b/app/views/v6-pcn/we-have-tried-to-find-your-updated-details.html
@@ -79,7 +79,7 @@
         
 
         <p>
-            <a href="#">Cancel</a>
+            <a href="penalty-charge-notice-details-bsa">Cancel</a>
        </div>
 </div>
 
