--- a/app/views/v6-pcn/what-is-your-address-dd.html
+++ b/app/views/v6-pcn/what-is-your-address-dd.html
@@ -92,7 +92,7 @@
         </button>
        </form>
 
-       <p class="navigation"><a class="cancel" href="start">Cancel</a></p>
+       <p class="navigation"><a class="cancel" href="penalty-charge-notice-details-bsa">Cancel</a></p>
 
     </div>
   </div>
