could not verify pages updated content

--- a/app/views/v6-pcn/error-messages/could-not-verify-details.html
+++ b/app/views/v6-pcn/error-messages/could-not-verify-details.html
@@ -32,9 +32,9 @@
         <span class="nhsuk-caption-l">Pay an NHS Penalty Charge Notice</span>
         <h1 class="nhsuk-heading-xl">We could not verify your details</h1>    
 
-        <p>Change your details if any of them are incorrect by selecting Change.</p>
+        <p>Change your details if any of them are incorrect by selecting change.</p>
         <p>Once you have done this, you'll be brought back to this page.</p>
-        <p>Select Try again after you have updated your details.</p>
+        <p>Select try again after you have updated your details.</p>
 
 
 <div class="nhsuk-form-group nhsuk-form-group--error">
@@ -96,6 +96,8 @@
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
             Try again
         </button>
+
+        <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
 
         
 
