--- a/app/views/v6-pcn/we-have-tried-to-find-your-updated-details.html
+++ b/app/views/v6-pcn/we-have-tried-to-find-your-updated-details.html
@@ -16,11 +16,11 @@
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
         <span class="nhsuk-caption-l">Pay an NHS Penalty Charge Notice</span>
-        <h1 class="nhsuk-heading-xl">We have tried to find your updated details but still could not verify them</h1>    
+        <h1 class="nhsuk-heading-xl">We have tried to find your updated details but still could not find them</h1>    
 
-        <p>Change your details if any of them are incorrect by selecting Change.</p>
+        <p>Change your details if any of them are incorrect by selecting change.</p>
         <p>Once you have done this, you'll be brought back to this page.</p>
-        <p>Select Try again after you have updated your details.</p>
+        <p>Select try again after you have updated your details.</p>
 
 
         <dl class="nhsuk-summary-list">
@@ -76,7 +76,7 @@
             Try again
         </button>
 
-        
+        <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
 
         <p>
             <a href="penalty-charge-notice-details-bsa">Cancel</a>
