--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -511,6 +511,14 @@ NHS.UK prototype kit
                                     </strong></td>
                                 </tr>
 
+                                <tr role="row" class="nhsuk-table__row">
+                                    <td class="nhsuk-table__cell">This page is no longer available</td>
+                                    <td class="nhsuk-table__cell"><a href="v6-pcn/page-not-found">Page not found</a></td>
+                                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                                        BOTH
+                                        </strong></td>
+                                    </tr>
+
                     </tbody>
                 </table>
 
