enter bank details routes added

--- a/app/views/v5-enquiry/we-need-proof.html
+++ b/app/views/v5-enquiry/we-need-proof.html
@@ -140,7 +140,7 @@
 
 
     <h2>How to send your proof</h2>
-    <p>You can send your proof by email or post.</p>
+    <p>You can send your proof by email or post. If you send proof by email the maximum file size is 6 megabytes (MB).</p>
 
     <h3>Sending by email</h3>
     <p>Take a photo, scan or screenshot of your proof. If you're taking a photo, use a mobile phone or digital camera.
