--- a/app/views/v6-pcn-decs/confirm-direct-debit.html
+++ b/app/views/v6-pcn-decs/confirm-direct-debit.html
@@ -164,7 +164,7 @@ Confirm and submit your Direct Debit
         Continue
       </a>
       ​
-      <p><a href="url">Cancel</a></p>
+      <p><a href="penalty-charge-notice-details">Cancel</a></p>
 
 
 
