--- a/app/views/v6-pcn-decs/direct-debit-date.html
+++ b/app/views/v6-pcn-decs/direct-debit-date.html
@@ -50,7 +50,7 @@ Which date would you like payments to be taken each month?
      <button class="nhsuk-button" type="submit">
       Continue
      </button>
-     <p><a href="respond-to-your-letter">Cancel</a></p>
+     <p><a href="penalty-charge-notice-details">Cancel</a></p>
     </div>
 
   
