--- a/app/views/v6-pcn-decs/direct-debit-instalment-option.html
+++ b/app/views/v6-pcn-decs/direct-debit-instalment-option.html
@@ -72,7 +72,7 @@ Select how many months you want to pay over
      <button class="nhsuk-button" type="submit">
       Continue
      </button>
-     <p><a href="respond-to-your-letter">Cancel</a></p>
+     <p><a href="penalty-charge-notice-details">Cancel</a></p>
     </div>
 
   </form>
