--- a/app/views/v6-pcn-decs/pay-by-dd.html
+++ b/app/views/v6-pcn-decs/pay-by-dd.html
@@ -73,7 +73,7 @@ Paying by Direct Debit
     <button class="nhsuk-button" type="submit">
      Continue
     </button>
-    <p><a href="respond-to-your-letter">Cancel</a></p>
+    <p><a href="penalty-charge-notice-details">Cancel</a></p>
     </div>
   </form>
         
