--- a/app/views/v6-pcn-decs/enter-bank-details.html
+++ b/app/views/v6-pcn-decs/enter-bank-details.html
@@ -33,6 +33,7 @@ Enter your bank details
   
     <p>Equifax will perform a check to verify the bank account details you give us. A record of this will be left on your credit record for 12 months but will not affect your credit rating.</p>
     
+    <form action="/v6-pcn-decs/enter-bank-details" method="post">
     <div class="nhsuk-form-group">
       <label class="nhsuk-label" for="input-width-10">
         Account holder's name
@@ -42,7 +43,7 @@ Enter your bank details
       <label class="nhsuk-label" for="example-with-hint-text">
         Account number
       </label>
-      <input class="nhsuk-input nhsuk-input--width-10" id="example-with-hint-text" name="example-with-hint-text" type="text" inputmode="numeric">
+      <input class="nhsuk-input nhsuk-input--width-10" id="accnumber" name="accnumber" type="text" inputmode="numeric">
       <br><br>
       <label class="nhsuk-label" for="input-width-2">
         Sort code
@@ -83,11 +84,12 @@ Enter your bank details
 
     
 ​
-    <a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="confirm-direct-debit">
-      Continue
-    </a>
+<button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+  Continue
+</button>
+</form>
 ​
-    <p><a href="url">Cancel</a></p>
+    <p><a href="penalty-charge-notice-details">Cancel</a></p>
 
 
 
