--- a/app/views/v6-pcn/dd-check-answers.html
+++ b/app/views/v6-pcn/dd-check-answers.html
@@ -15,8 +15,6 @@ Check your answers
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="enter-bank-details" method="post" class="form">
-
       <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
       <h1 class="nhsuk-heading-l">Check your answers are correct</h1>
 
@@ -219,12 +217,11 @@ Check your answers
     </dl>
   
 
-    <div class="nhsuk-form-group">
-      <button class="nhsuk-button" type="submit">
-       Continue
-      </button>
+    <a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="enter-bank-details">
+      Continue
+    </a>
       <p><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
-     </div>
+     
 
 
 
