personal details updated to DD journey

--- a/app/views/v6-pcn/we-could-not-verify-your-details.html
+++ b/app/views/v6-pcn/we-could-not-verify-your-details.html
@@ -27,7 +27,7 @@
 
             <div class="nhsuk-summary-list__row">
               <dt class="nhsuk-summary-list__key">
-                11 Street <br> ELY <br> Newcastle <br>NEX 421
+                12 Old Oak Road <br> Throckley <br>NE67 9AD
               </dt>
               <dd class="nhsuk-summary-list__value">
                 </dd>
@@ -44,7 +44,7 @@
           
             <div class="nhsuk-summary-list__row">
               <dt class="nhsuk-summary-list__key">
-                Bank Account <br> 43215432 <br> Sort Code <br> 40-23-22 <br> Stephens
+                Bank Account <br> 1234567891 <br> Sort Code <br> 12-34-56 <br> Michelle Doe
               </dt>
               <dd class="nhsuk-summary-list__value">
                 
@@ -76,7 +76,7 @@
             Try again
         </button>
 
-        <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
+        <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
 
         
 
