--- a/app/views/v6-pcn/error-messages/payment-has-timed-out.html
+++ b/app/views/v6-pcn/error-messages/payment-has-timed-out.html
@@ -23,8 +23,10 @@ Payment not authorised
           </span>
         </summary>
         <div class="nhsuk-details__text">
-          <p>Content to go in here...</p>
-          <p>You can find your NHS number by logging in to a GP online service or on any document the NHS has sent you, such as your:</p>
+          <p>Check your email for payment confirmation.</p>
+          <p>If you made a partial payment, log in to check the balance.</p>
+          <p>If you paid in full, log in to see if your case has been closed.</p>
+          <p>It can take 24 hours for payment information to update.</p>
           
       
         </div>
