we cannot set up page content amended

--- a/app/views/v6-pcn-decs/we-cannot-set-up-your-direct-debit.html
+++ b/app/views/v6-pcn-decs/we-cannot-set-up-your-direct-debit.html
@@ -20,7 +20,7 @@ We cannot set up your Direct Debit
   
     <p>We've been unable to verify your details.</p>
     
-    <p>You'll need to pay in full if you want to pay online.</p>
+    <p>You'll need to pay by card if you want to pay online.</p>
 
     <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
       Pay
@@ -29,10 +29,15 @@ We cannot set up your Direct Debit
     <h2>Pay in instalments</h2>
     <p>If you want to pay in instalments, you'll need to contact us by:</p>
 
-    <p><b>Telephone</b>: 0300 330 9291 (this will be charged at a local rate). Lines are available Monday to Friday from 8am to 6pm and Saturday from 9am to 3pm.</p>
     <p><b>Email</b>: <a href="mailto:someone@example.com">nhsbsa.pecs@nhsbsa.nhs.uk</a> </p>
-    <p>You'll need your reference number. This is in the top left-hand corner of your Penalty Charge Notice letter. </p>
 
+    <p><b>Telephone</b>: 0300 330 9291</p>
+    
+    <p>You'll need your reference number. You can find this on your Penalty Charge Notice. </p>
+
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Find out about call charges and other ways to contact us on our website</a>. </p>
+
+    <p><a href="/v6-pcn-decs/penalty-charge-notice-details"> Cancel</a></p>
    
   </div>
 </div>
