--- a/app/views/v6-pcn/error-messages/cannot-set-up-direct-debit.html
+++ b/app/views/v6-pcn/error-messages/cannot-set-up-direct-debit.html
@@ -7,40 +7,40 @@ We cannot set up your Direct Debit
 {% endblock %}
 ​
 {% block content %}
+​
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-two-thirds">
+    <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
+    <h1 class="nhsuk-heading-l">
+      We cannot set up your Direct Debit
+    </h1>
 
-​
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
-      <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
-      <h1 class="nhsuk-heading-l">
-        We cannot set up your Direct Debit
-      </h1>
-    
-      <p>We've been unable to verify your details.</p>
-      
-      <p>You'll need to pay in full if you want to pay online.</p>
-​
-      <a href="/v6-pcn/payment-choice"><button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-        Pay
-      </button></a>
-      
-      
-​
-      <h2 class="nhsuk-heading-m">Pay in installments</h2>
-      <p>If you want to pay in installments, you'll need to contact us by:</p>
-​
-      <p><b>Telephone</b>: 0300 330 9291 (this will be charged at a local rate). Lines are available Monday to Friday from 8am to 6pm and Saturday from 9am to 3pm.</p>
-      <p><b>Email</b>: <a href="mailto:someone@example.com">nhsbsa.pecs@nhsbsa.nhs.uk</a> </p>
-      <p>You'll need your reference number. This is in the top left-hand corner of your Penalty Charge Notice letter. </p>
-​
-      <p><a href="../penalty-charge-notice-details-bsa">Cancel</a></p>
-​
-​
-​
-     
-    </div>
+    <p>We've been unable to verify your details.</p>
+
+    <p>You'll need to pay by card if you want to pay online.</p>
+    ​
+    <a href="/v6-pcn/payment-choice" class="nhsuk-button">
+      Pay
+    </a>
+    ​
+    <h2 class="nhsuk-heading-m">Pay in installments</h2>
+    <p>If you want to pay in installments, you'll need to contact us by:</p>
+
+    <p><b>Email</b>: <a href="mailto:someone@example.com">nhsbsa.pecs@nhsbsa.nhs.uk</a></p>
+    <p><b>Telephone</b>: 0300 330 9291</p>
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Find out about call charges and
+        other ways to contact us on our website</a>.</p>
+    ​
+
+    ​
+    <p><a href="/v6-pcn/penalty-charge-notice-details">Cancel</a></p>
+    ​
+    ​
+    ​
+
   </div>
-  <style>
-  
-  </style>
+</div>
+<style>
+
+</style>
 {% endblock %}
