dental PCN notice pages updated

--- a/app/views/v6-pcn-decs/penalty-charge-notice-details-bsa.html
+++ b/app/views/v6-pcn-decs/penalty-charge-notice-details-bsa.html
@@ -92,7 +92,7 @@ Penalty Charge Notice
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total prescription charge
+              Dental treatment charges
             </dt>
             <dd class="nhsuk-summary-list__value">
               £9.65
