--- a/app/views/v6-pcn-decs/penalty-charge-notice-details.html
+++ b/app/views/v6-pcn-decs/penalty-charge-notice-details.html
@@ -92,7 +92,7 @@ Penalty Charge Notice
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total prescription charge
+              Dental treatment charges
             </dt>
             <dd class="nhsuk-summary-list__value">
               £9.65
@@ -213,7 +213,7 @@ Penalty Charge Notice
 
 
     </dl>
-    <h3>Details on the prescription</h3>
+    <h3>Details on the dental treatment form</h3>
     <dl class="nhsuk-summary-list">
       <div class="nhsuk-summary-list__row">
         <dt class="nhsuk-summary-list__key">
@@ -247,7 +247,7 @@ Penalty Charge Notice
       </div>
       <div class="nhsuk-summary-list__row">
         <dt class="nhsuk-summary-list__key">
-          Date prescription was claimed
+          Date dental treatment was claimed
         </dt>
         <dd class="nhsuk-summary-list__value">
          On 21 April 2021
