DD blocked page content updated

--- a/app/views/v6-pcn/penalty-charge-details-DD-blocked.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-blocked.html
@@ -276,6 +276,13 @@ Penalty Charge Notice details on hold
 
     <h2>Pay a Penalty Charge Notice</h2>
     <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by either debit or credit card.</p>
+    <p>You are not able to pay by Direct Debit. This is because either:</p>
+    <ul>
+      <li>we were unable to confirm your details when you applied previously</li>
+      <li>you have previously had a Direct Debit plan cancelled</li>
+      <li>the amount you need to pay is below the minimum needed to set up a Direct Debit</li>
+    </ul>
+
     <p>You are no longer able to pay by Direct Debit. We were unable to confirm your details when you applied previously.</p>
   </div>
   <dl>
