content updated on confirm and submit

--- a/app/views/v6-pcn/confirm-direct-debit.html
+++ b/app/views/v6-pcn/confirm-direct-debit.html
@@ -138,6 +138,8 @@ Confirm and submit your Direct Debit
         </div>
       </div>
 
+      <p>You must agree to the terms and conditions.</p>
+
 
 
 
